--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gpt-json",
-  "version": "0.0.6",
+  "version": "1.0.0-beta.1",
   "description": "Call OpenAI's GPT APIs with structured responses",
   "main": "./lib/index.js",
   "files": [
@@ -27,7 +27,7 @@
     "url": "https://github.com/KLaci"
   },
   "engines": {
-    "node": ">=12.0"
+    "node": ">=18.0"
   },
   "keywords": [
     "boilerplate",
@@ -50,6 +50,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^12.20.11",
     "conventional-changelog-conventionalcommits": "^5.0.0",
+    "dotenv": "^16.3.1",
     "husky": "^6.0.0",
     "jest": "^27.2.0",
     "lint-staged": "^13.2.1",
@@ -110,7 +111,11 @@
     ]
   },
   "dependencies": {
-    "openai": "^3.3.0",
+    "@types/isomorphic-fetch": "^0.0.36",
+    "form-data": "^4.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "node-fetch": "^3.3.2",
+    "openai": "4.0.0-beta.7",
     "yup": "^1.2.0"
   }
 }
